a1/brendan_gordon/TEST_PROGRAMS/invalidtype/remi_bernard/dbl.min
# same var declared twice
var x: int;
var x: string;
x = 2;

